Adds detection for Flow browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Linux x86_64) EkiohFlow/5.11.1.33219 Flow/5.11.1 (like Gecko Firefox/62.0 rv:62.0)
+  client:
+    type: browser
+    name: Flow
+    version: 5.11.1.33219
+    engine: Flow
+    engine_version: 5.11.1.33219
