--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Flow (https://www.ekioh.com/)
+- regex: 'EkiohFlow/(?:(\d+[\.\d]+))?'
+  name: 'Flow'
+  version: '$1'
+  engine:
+    default: 'Flow'
+
 # Phoenix Browser (http://phoenix-browser.com/ | https://play.google.com/store/apps/details?id=com.transsion.phoenix)
 - regex: 'PHX/(?:(\d+[\.\d]+))?'
   name: 'Phoenix Browser'
