Adds detection for Microsoft Xbox One S

--- a/Tests/Parser/Device/fixtures/console.yml
+++ b/Tests/Parser/Device/fixtures/console.yml
@@ -77,3 +77,9 @@
     type: console
     brand: Sony
     model: PlayStation Vita
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; XBOX_ONE_ED) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.79 Safari/537.36 Edge/14.14393
+  device:
+    type: console
+    brand: Microsoft
+    model: Xbox One S
