--- a/regexes/device/consoles.yml
+++ b/regexes/device/consoles.yml
@@ -16,6 +16,8 @@ Microsoft:
   models:
     - regex: 'Xbox One'
       model: 'Xbox One'
+    - regex: 'XBOX_ONE_ED'
+      model: 'Xbox One S'
     - regex: 'Xbox'
       model: 'Xbox 360'
 
