--- a/Tests/fixtures/console.yml
+++ b/Tests/fixtures/console.yml
@@ -287,3 +287,21 @@
     model: PlayStation Vita
   os_family: Mobile Gaming Console
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; XBOX_ONE_ED) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.79 Safari/537.36 Edge/14.14393
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "14.14393"
+    engine: Edge
+    engine_version: "14.14393"
+  device:
+    type: console
+    brand: Microsoft
+    model: Xbox One S
+  os_family: Windows
+  browser_family: Internet Explorer
