--- a/Tests/fixtures/console.yml
+++ b/Tests/fixtures/console.yml
@@ -305,3 +305,21 @@
     model: Xbox One S
   os_family: Windows
   browser_family: Internet Explorer
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; Xbox; Xbox One X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.82 Safari/537.36 Edge/20.02
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "20.02"
+    engine: Edge
+    engine_version: "20.02"
+  device:
+    type: console
+    brand: Microsoft
+    model: Xbox One X
+  os_family: Windows
+  browser_family: Internet Explorer
