--- a/Tests/Parser/Device/fixtures/console.yml
+++ b/Tests/Parser/Device/fixtures/console.yml
@@ -89,3 +89,9 @@
     type: console
     brand: Microsoft
     model: Xbox One X
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; Xbox; Xbox Series X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.82 Safari/537.36 Edge/20.02
+  device:
+    type: console
+    brand: Microsoft
+    model: Xbox Series X
