--- a/regexes/device/consoles.yml
+++ b/regexes/device/consoles.yml
@@ -14,6 +14,8 @@ Microsoft:
   regex: 'Xbox'
   device: 'console'
   models:
+    - regex: 'Xbox Series X'
+      model: 'Xbox Series X'
     - regex: 'Xbox One X'
       model: 'Xbox One X'
     - regex: 'Xbox One'
