--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) SFive/62.115 Chrome/62.115.3202.101 Safari/537.36
+  client:
+    type: browser
+    name: SFive
+    version: "62.115"
+    engine: WebKit
+    engine_version: "537.36"
