--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,19 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) chimlac_browser/1.0 Chrome/64.0.3282.140 Safari/537.36
+  client:
+    type: browser
+    name: Chim Lạc
+    version: "1.0"
+    engine: WebKit
+    engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.91 chimlac/73.0.3683.91 Safari/537.36
+  client:
+    type: browser
+    name: Chim Lạc
+    version: 73.0.3683.91
+    engine: WebKit
+    engine_version: "537.36"
