--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Chim Lạc (https://chimlac.com.vn/)
+- regex: '(?:chimlac_browser|chimlac)/(?:(\d+[\.\d]+))?'
+  name: 'Chim Lạc'
+  version: '$1'
+
 # Phoenix Browser (http://phoenix-browser.com/ | https://play.google.com/store/apps/details?id=com.transsion.phoenix)
 - regex: 'PHX/(?:(\d+[\.\d]+))?'
   name: 'Phoenix Browser'
