--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; N280 Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Stargon/2.3.2 Chrome/59.0.3071.125 Mobile Safari/537.36
+  client:
+    type: browser
+    name: Stargon
+    version: 2.3.2
+    engine: WebKit
+    engine_version: "537.36"
