--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.2; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.90 BeagleBrowser/42.0.2311.96 Safari/537.36
+  client:
+    type: browser
+    name: Beagle Browser
+    version: 42.0.2311.96
+    engine: WebKit
+    engine_version: "537.36"
