Adds detection for Secure Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.112 Secure/57.0.441.112 Safari/537.36
+  client:
+    type: browser
+    name: Secure Browser
+    version: 57.0.441.112
+    engine: WebKit
+    engine_version: "537.36"
