--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; T8 Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) YoloBrowser/1.0.1.74 Safari/537.36
+  client:
+    type: browser
+    name: YOLO Browser
+    version: 1.0.1.74
+    engine: WebKit
+    engine_version: "537.36"
