--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) UR/61.1.3163.21 Chrome/62.0.3202.94 Safari/537.36
+  client:
+    type: browser
+    name: UR
+    version: 61.1.3163.21
+    engine: WebKit
+    engine_version: "537.36"
