--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (X11; CrOS x86_64 11151.23.2020; SeewoOS x86_64 2.0.16.3558) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.139 Safari/537.36 SeewoBrowser/2.0.16.3558
+  client:
+    type: browser
+    name: Seewo Browser
+    version: 2.0.16.3558
+    engine: WebKit
+    engine_version: "537.36"
