Adds detection for NFS Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64; Deepin 15.11) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.75 Safari/537.36 NFSBrowser/5.0.5.2050
+  client:
+    type: browser
+    name: NFS Browser
+    version: 5.0.5.2050
+    engine: WebKit
+    engine_version: "537.36"
