--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2651,7 +2651,7 @@
   user_agent: Mozilla/5.0 (Linux; Android 5.1; T8 Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) YoloBrowser/1.0.1.74 Safari/537.36
   client:
     type: browser
-    name: YOLO Browser
+    name: Yolo Browser
     version: 1.0.1.74
-    engine: WebKit
+    engine: Blink
     engine_version: "537.36"
