--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,10 +5,12 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# YOLO Browser
+# Yolo Browser
 - regex: 'YoloBrowser/(?:(\d+[\.\d]+))?'
-  name: 'YOLO Browser'
+  name: 'Yolo Browser'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # Phoenix Browser (http://phoenix-browser.com/ | https://play.google.com/store/apps/details?id=com.transsion.phoenix)
 - regex: 'PHX/(?:(\d+[\.\d]+))?'
