--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2653,5 +2653,5 @@
     type: browser
     name: NFS Browser
     version: 5.0.5.2050
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
