--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; JNY-LX1 Build/HUAWEIJNY-L21; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 Mobile Safari/537.36 AgentWeb/4.1.3 UCBrowser/11.6.4.950
+  client:
+    type: browser
+    name: CoolBrowser
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
