--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# CoolBrowser (https://play.google.com/store/apps/details?id=com.easybrowser.browser.coolbrowser)
+- regex: 'Chrome/(\d+[\.\d]+).+AgentWeb.+UCBrowser'
+  name: 'CoolBrowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Phoenix Browser (http://phoenix-browser.com/ | https://play.google.com/store/apps/details?id=com.transsion.phoenix)
 - regex: 'PHX/(?:(\d+[\.\d]+))?'
   name: 'Phoenix Browser'
