--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2647,3 +2647,11 @@
     version: "6.0"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Freebox; Linux i686) AppleWebKit/538.1 (KHTML, like Gecko) Navigateur web/1.0 Safari/538.1
+  client:
+    type: browser
+    name: Navigateur Web
+    version: "1.0"
+    engine: WebKit
+    engine_version: "538.1"
