Adds detection for SeewoOS operating system

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -518,6 +518,14 @@
 
 
 ##########
+# SeewoOS
+##########
+- regex: 'SeewoOS x86_64 (\d+[\.\d]+)'
+  name: 'SeewoOS'
+  version: '$1'
+
+
+##########
 # ChromeOS
 ##########
 - regex: 'CrOS [a-z0-9_]+ .* Chrome/(\d+[\.\d]+)'
