--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1101,3 +1101,10 @@
     short_name: RSO
     version: ""
     platform: x64
+-
+  user_agent: Mozilla/5.0 (X11; CrOS x86_64 11151.23.2020; SeewoOS x86_64 2.0.16.3558) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.139 Safari/537.36 SeewoBrowser/2.0.16.3558
+  os:
+    name: SeewoOS
+    short_name: SEE
+    version: 2.0.16.3558
+    platform: x64
