Adds detection for Freebox operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1101,3 +1101,10 @@
     short_name: RSO
     version: ""
     platform: x64
+-
+  user_agent: Mozilla/5.0 (Freebox; Linux i686) AppleWebKit/538.1 (KHTML, like Gecko) Navigateur web/1.0 Safari/538.1
+  os:
+    name: Freebox
+    short_name: FRE
+    version: ""
+    platform: x86
