fix: YAML-Lint errors in NFSBrowser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -8,9 +8,10 @@
 # NFS Browser (https://github.com/nfschina/nfs-browser)
 - regex: 'NFSBrowser/(?:(\d+[\.\d]+))?'
   name: 'NFS Browser'
-  engine: Blink
+  version: '$1'
+  engine: 'Blink'
     engine_version: ""
-    
+
 # Borealis Navigator (https://binaryoutcast.com/projects/borealis/)
 - regex: 'Borealis/(\d+[\.\d]+)'
   name: 'Borealis Navigator'
