fix: YAML Lint errors (2)

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -9,8 +9,8 @@
 - regex: 'NFSBrowser/(?:(\d+[\.\d]+))?'
   name: 'NFS Browser'
   version: '$1'
-  engine: 'Blink'
-    engine_version: ""
+  engine:
+    default: 'Blink'
 
 # Borealis Navigator (https://binaryoutcast.com/projects/borealis/)
 - regex: 'Borealis/(\d+[\.\d]+)'
