--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2687,3 +2687,11 @@
     version: 1.0.1.74
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.87 Safari/537.36 SLBrowser/6.0.1.9171
+  client:
+    type: browser
+    name: Smart Lenovo Browser
+    version: 6.0.1.9171
+    engine: Blink
+    engine_version: ""
