--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Smart Lenovo Browser (https://www.lenovo.com.cn/)
+- regex: 'SLBrowser/(?:(\d+[\.\d]+))?'
+  name: 'Smart Lenovo Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Stargon (http://www.stargon.org/ | https://play.google.com/store/apps/details?id=net.onecook.browser)
 - regex: 'Stargon/(?:(\d+[\.\d]+))?'
   name: 'Stargon'
