--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2687,3 +2687,11 @@
     version: 1.0.1.74
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 10.0; Win64; x64; Anonymisiert durch AlMiSoft Browser-Maulkorb 39663422; Trident/7.0; .NET4.0C; .NET4.0E; .NET CLR 2.0.50727; .NET CLR 3.0.30729; .NET CLR 3.5.30729; Tablet PC 2.0; Browzar)
+  client:
+    type: browser
+    name: Browzar
+    version: ""
+    engine: Trident
+    engine_version: "7.0"
