--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Browzar (https://www.browzar.com/)
+- regex: 'Browzar'
+  name: 'Browzar'
+  version: '$1'
+
 # Stargon (http://www.stargon.org/ | https://play.google.com/store/apps/details?id=net.onecook.browser)
 - regex: 'Stargon/(?:(\d+[\.\d]+))?'
   name: 'Stargon'
