Adds detection for BDCbot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3825,3 +3825,12 @@
     producer:
       name: Google Inc.
       url: http://www.google.com
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; BDCbot/1.0; +http://bigweb.bigdatacorp.com.br/faq.aspx) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Safari/537.36
+  bot:
+    name: BDCbot
+    category: Crawler
+    url: https://bigweb.bigdatacorp.com.br/pages/faq.aspx
+    producer:
+      name: BIG Data Solucoes Em Tecnologia de Informatica LTDA
+      url: https://bigdatacorp.com.br/
