Adds detection for Cloudflare Diagnostics

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3834,3 +3834,12 @@
     producer:
       name: BIG Data Solucoes Em Tecnologia de Informatica LTDA
       url: https://bigdatacorp.com.br/
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36 CloudflareDiagnostics/1.0
+  bot:
+    name: Cloudflare Diagnostics
+    category: Site Monitor
+    url: https://www.cloudflare.com/
+    producer:
+      name: Cloudflare
+      url: https://www.cloudflare.com
