Adds detection for Adbeat

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2134,6 +2134,14 @@
     name: 'BIG Data Solucoes Em Tecnologia de Informatica LTDA'
     url: 'https://bigdatacorp.com.br/'
 
+- regex: 'adbeat'
+  name: 'Adbeat'
+  category: 'Crawler'
+  url: 'https://www.adbeat.com/operation_policy'
+  producer:
+    name: 'PPC Labs LLC'
+    url: 'https://www.adbeat.com/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
