--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3843,3 +3843,12 @@
     producer:
       name: Cloudflare
       url: https://www.cloudflare.com
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_0 like Mac OS X) adbeat.com/policy AppleWebKit/605.1.15 (KHTML, like Gecko) CriOS/69.0.3497.105 Mobile/15E148 Safari/605.1
+  bot:
+    name: Adbeat
+    category: Crawler
+    url: https://www.adbeat.com/operation_policy
+    producer:
+      name: PPC Labs LLC
+      url: https://www.adbeat.com/
