--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4,7 +4,7 @@
   bot:
     name: 360Spider
     category: Search bot
-    url: http://www.so.com/help/help_3_2.html
+    url: https://www.so.com/help/help_3_2.html
     producer:
       name: Online Media Group, Inc.
       url: ""
@@ -13,7 +13,7 @@
   bot:
     name: 360Spider
     category: Search bot
-    url: http://www.so.com/help/help_3_2.html
+    url: https://www.so.com/help/help_3_2.html
     producer:
       name: Online Media Group, Inc.
       url: ""
@@ -22,7 +22,7 @@
   bot:
     name: 360Spider
     category: Search bot
-    url: http://www.so.com/help/help_3_2.html
+    url: https://www.so.com/help/help_3_2.html
     producer:
       name: Online Media Group, Inc.
       url: ""
@@ -31,7 +31,7 @@
   bot:
     name: 360Spider
     category: Search bot
-    url: http://www.so.com/help/help_3_2.html
+    url: https://www.so.com/help/help_3_2.html
     producer:
       name: Online Media Group, Inc.
       url: ""
@@ -77,19 +77,19 @@
   bot:
     name: Alexa Crawler
     category: Search bot
-    url: https://alexa.zendesk.com/hc/en-us/sections/200100794-Crawlers
+    url: https://support.alexa.com/hc/en-us/sections/200100794-Crawlers
     producer:
       name: Alexa Internet
-      url: http://www.alexa.com
+      url: https://www.alexa.com
 - 
   user_agent: Mozilla/5.0 (compatible; alexa site audit/1.0; http://www.alexa.com/help/webmasters; )
   bot:
     name: Alexa Site Audit
     category: Site Monitor
-    url: http://www.alexa.com/help/webmasters
+    url: https://support.alexa.com/hc/en-us/articles/200450194
     producer:
       name: Alexa Internet
-      url: http://www.alexa.com
+      url: https://www.alexa.com
 - 
   user_agent: Amazon Route 53 Health Check Service; ref:xxxxxxxx-xxxx-xxxxxxxxx-xxxxxxxxxxxx; report http://amzn.to/xxxxxxx
   bot:
@@ -132,34 +132,34 @@
     url: https://httpd.apache.org/docs/2.4/programs/ab.html
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10 _1) AppleWebKit/600.2.5 (KHTML, like Gecko) Version/8.0.2 Safari/600.2.5 (Applebot/0.1; +http://www.apple.com/go/applebot)
   bot:
     name: Applebot
     category: Crawler
-    url: http://www.apple.com/go/applebot
+    url: https://support.apple.com/en-us/HT204683
     producer:
       name: Apple Inc
-      url: http://www.apple.com
+      url: https://www.apple.com
 - 
   user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/600.2.5 (KHTML, like Gecko) Version/8.0.2 Safari/600.2.5 (Applebot/0.1)
   bot:
     name: Applebot
     category: Crawler
-    url: http://www.apple.com/go/applebot
+    url: https://support.apple.com/en-us/HT204683
     producer:
       name: Apple Inc
-      url: http://www.apple.com
+      url: https://www.apple.com
 - 
   user_agent: Arachni/v1.5.1
   bot:
     name: Arachni
     category: Security Checker
-    url: http://www.arachni-scanner.com
+    url: https://www.arachni-scanner.com/
     producer:
       name: Sarosys LLC
-      url: http://www.sarosys.com/
+      url: https://www.sarosys.com/
 - 
   user_agent: Mozilla/2.0 (compatible; Ask Jeeves/Teoma)
   bot:
@@ -432,10 +432,10 @@
   bot:
     name: BoardReader
     category: Search bot
-    url: http://boardreader.com/
+    url: https://boardreader.com/
     producer:
       name: Effyis Inc
-      url: http://boardreader.com/
+      url: https://boardreader.com/
 - 
   user_agent: BoardReader Blog Indexer(http://boardreader.com)
   bot:
@@ -443,7 +443,7 @@
     category: Crawler
     producer:
       name: BoardReader
-      url: http://boardreader.com/
+      url: https://boardreader.com/
 - 
   user_agent: Mozilla/5.0 (compatible; BountiiBot/1.1; +http://bountii.com/contact.php)
   bot:
@@ -1444,7 +1444,7 @@
   bot:
     name: Grammarly
     category: Service bot
-    url: http://www.grammarly.com
+    url: https://www.grammarly.com
 - 
   user_agent: Mozilla/5.0 (compatible; GrapeshotCrawler/2.0; +https://www.grapeshot.com/crawler/)
   bot:
@@ -1480,7 +1480,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; heritrix/1.14.4 +http://webarhive.nlc.gov.cn)
   bot:
@@ -1489,7 +1489,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; heritrix/1.14.4 +http://www.dla-marbach.de)
   bot:
@@ -1498,7 +1498,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: mozilla/5.0 (compatible; heritrix/1.3.0 http://archive.crawler.org)
   bot:
@@ -1507,7 +1507,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; heritrix/3.1.1 +http://www.baidu.com)
   bot:
@@ -1516,7 +1516,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; heritrix/3.1.1 +http://www.run4dom.com)
   bot:
@@ -1525,7 +1525,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; heritrix/3.1.2-SNAPSHOT-20130207.001528 +http://webarchiv.cz/kontakty/)
   bot:
@@ -1534,7 +1534,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; worio bot heritrix/1.10.0 +http://worio.com)
   bot:
@@ -1543,7 +1543,7 @@
     url: https://webarchive.jira.com/wiki/display/Heritrix/Heritrix
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Heurekabot-Feed/1.0 (+https://sluzby.heureka.cz/napoveda/heurekabot/)
   bot:
@@ -1992,7 +1992,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: CB/Nutch-1.7
   bot:
@@ -2001,7 +2001,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Mozilla/5.0 (compatible; summers;)/Nutch-1.7
   bot:
@@ -2010,7 +2010,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; zh-CN; rv:1.9.2.8) Firefox/3.6.8/Nutch-1.7
   bot:
@@ -2019,7 +2019,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: My Nutch Spider/Nutch-1.6
   bot:
@@ -2028,7 +2028,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: MySpider/Nutch-2.2
   bot:
@@ -2037,7 +2037,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Nutch12/Nutch-1.2
   bot:
@@ -2046,7 +2046,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: NutchSpider/Nutch-1.4
   bot:
@@ -2055,7 +2055,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: spider/Nutch-1.5.1 (spider; http://www.xxx.com)
   bot:
@@ -2064,7 +2064,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Spider/Nutch-2.3-SNAPSHOT (Webcrawler)
   bot:
@@ -2073,7 +2073,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: testnutch/Nutch-1.8
   bot:
@@ -2082,7 +2082,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Your Nutch Spider/Nutch-2.2.1
   bot:
@@ -2091,7 +2091,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: your sipder name/Nutch-1.7
   bot:
@@ -2100,7 +2100,7 @@
     url: https://nutch.apache.org
     producer:
       name: The Apache Software Foundation
-      url: http://www.apache.org/foundation/
+      url: https://www.apache.org/foundation/
 - 
   user_agent: Nuzzel
   bot:
@@ -2554,7 +2554,7 @@
   bot:
     name: Serendeputy Bot
     category: Crawler
-    url: http://serendeputy.com/about/serendeputy-bot
+    url: https://serendeputy.com/about/serendeputy-bot
 - 
   user_agent: Server Density Service Monitoring v2
   bot:
@@ -3634,100 +3634,100 @@
   bot:
     name: aHrefs Bot
     category: Crawler
-    url: http://ahrefs.com/robot
+    url: https://ahrefs.com/robot
     producer:
       name: Ahrefs Pte Ltd
-      url: http://ahrefs.com/robot
+      url: https://ahrefs.com/robot
 - 
   user_agent: Mozilla/5.0 (compatible; AhrefsBot/3.1; +http://ahrefs.com/robot/
   bot:
     name: aHrefs Bot
     category: Crawler
-    url: http://ahrefs.com/robot
+    url: https://ahrefs.com/robot
     producer:
       name: Ahrefs Pte Ltd
-      url: http://ahrefs.com/robot
+      url: https://ahrefs.com/robot
 - 
   user_agent: Mozilla/5.0 (compatible; AhrefsBot/5.0; +http://ahrefs.com/robot/)
   bot:
     name: aHrefs Bot
     category: Crawler
-    url: http://ahrefs.com/robot
+    url: https://ahrefs.com/robot
     producer:
       name: Ahrefs Pte Ltd
-      url: http://ahrefs.com/robot
+      url: https://ahrefs.com/robot
 - 
   user_agent: 'Mozilla/5.0 (compatible; AhrefsBot/5.0; +http://ahrefs.com/robot/) AppEngine-Google; (+http://code.google.com/appengine; appid: s~proxyfile1-hrd)'
   bot:
     name: aHrefs Bot
     category: Crawler
-    url: http://ahrefs.com/robot
+    url: https://ahrefs.com/robot
     producer:
       name: Ahrefs Pte Ltd
-      url: http://ahrefs.com/robot
+      url: https://ahrefs.com/robot
 - 
   user_agent: Mozilla/5.0 (compatible; archive.org_bot +http://www.archive.org/details/archive.org_bot)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; archive.org_bot/3.3.0 +http://pandora.nla.gov.au/crawl.html)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; archive.org_bot; Archive-It; +http://archive-it.org/files/site-owners.html)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; archive.org_bot; Wayback Machine Live Record; +http://archive.org/details/archive.org_bot)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; heritrix/3.1.2-SNAPSHOT-20131029-0036 +http://archive.org/details/archive.org_bot)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; special_archiver/3.1.1 +http://www.archive.org/details/archive.org_bot)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: Mozilla/5.0 (compatible; special_archiver/3.2.0 +http://www.loc.gov/webarchiving/notice_to_webmasters.html)
   bot:
     name: archive.org bot
     category: Crawler
-    url: http://www.archive.org/details/archive.org_bot
+    url: https://archive.org/details/archive.org_bot
     producer:
       name: The Internet Archive
-      url: http://www.archive.org
+      url: https://archive.org
 - 
   user_agent: CCBot/2.0 (http://commoncrawl.org/faq/)
   bot:
@@ -3788,7 +3788,7 @@
   bot:
     name: oBot
     category: Search bot
-    url: http://www.xforce-security.com/crawler/
+    url: https://www.xforce-security.com/crawler/
     producer:
       name: 'IBM Germany Research & Development GmbH'
       url: https://exchange.xforce.ibmcloud.com/
