--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -8,7 +8,7 @@
 - regex: '360Spider(-Image|-Video)?'
   name: '360Spider'
   category: 'Search bot'
-  url: 'http://www.so.com/help/help_3_2.html'
+  url: 'https://www.so.com/help/help_3_2.html'
   producer:
     name: 'Online Media Group, Inc.'
     url: ''
@@ -40,26 +40,26 @@
 - regex: 'AhrefsBot'
   name: 'aHrefs Bot'
   category: 'Crawler'
-  url: 'http://ahrefs.com/robot'
+  url: 'https://ahrefs.com/robot'
   producer:
     name: 'Ahrefs Pte Ltd'
-    url: 'http://ahrefs.com/robot'
+    url: 'https://ahrefs.com/robot'
 
 - regex: 'ia_archiver|alexabot|verifybot'
   name: 'Alexa Crawler'
   category: 'Search bot'
-  url: 'https://alexa.zendesk.com/hc/en-us/sections/200100794-Crawlers'
+  url: 'https://support.alexa.com/hc/en-us/sections/200100794-Crawlers'
   producer:
     name: 'Alexa Internet'
-    url: 'http://www.alexa.com'
+    url: 'https://www.alexa.com'
 
 - regex: 'alexa site audit'
   name: 'Alexa Site Audit'
   category: 'Site Monitor'
-  url: 'http://www.alexa.com/help/webmasters'
+  url: 'https://support.alexa.com/hc/en-us/articles/200450194'
   producer:
     name: 'Alexa Internet'
-    url: 'http://www.alexa.com'
+    url: 'https://www.alexa.com'
 
 - regex: 'Amazon[ -]Route ?53[ -]Health[ -]Check[ -]Service'
   name: 'Amazon Route53 Health Check'
@@ -82,23 +82,23 @@
   url: 'https://httpd.apache.org/docs/2.4/programs/ab.html'
   producer:
     name: 'The Apache Software Foundation'
-    url: 'http://www.apache.org/foundation/'
+    url: 'https://www.apache.org/foundation/'
 
 - regex: 'Applebot'
   name: 'Applebot'
   category: 'Crawler'
-  url: 'http://www.apple.com/go/applebot'
+  url: 'https://support.apple.com/en-us/HT204683'
   producer:
     name: 'Apple Inc'
-    url: 'http://www.apple.com'
+    url: 'https://www.apple.com'
 
 - regex: 'Arachni'
   name: 'Arachni'
   category: 'Security Checker'
-  url: 'http://www.arachni-scanner.com'
+  url: 'https://www.arachni-scanner.com/'
   producer:
     name: 'Sarosys LLC'
-    url: 'http://www.sarosys.com/'
+    url: 'https://www.sarosys.com/'
 
 - regex: 'AspiegelBot'
   name: 'AspiegelBot'
@@ -127,10 +127,10 @@
 - regex: 'archive\.org_bot|special_archiver'
   name: 'archive.org bot'
   category: 'Crawler'
-  url: 'http://www.archive.org/details/archive.org_bot'
+  url: 'https://archive.org/details/archive.org_bot'
   producer:
     name: 'The Internet Archive'
-    url: 'http://www.archive.org'
+    url: 'https://archive.org'
 
 - regex: 'Ask Jeeves/Teoma'
   name: 'Ask Jeeves'
@@ -217,7 +217,7 @@
   category: 'Crawler'
   producer:
     name: 'BoardReader'
-    url: 'http://boardreader.com/'
+    url: 'https://boardreader.com/'
 
 - regex: 'BountiiBot'
   name: 'Bountii Bot'
@@ -671,7 +671,7 @@
   url: 'https://webarchive.jira.com/wiki/display/Heritrix/Heritrix'
   producer:
     name: 'The Internet Archive'
-    url: 'http://www.archive.org'
+    url: 'https://archive.org'
 
 - regex: 'HubSpot '
   name: 'HubSpot'
@@ -679,7 +679,6 @@
   producer:
     name: 'HubSpot Inc.'
     url: 'https://www.hubspot.com'
-
 
 - regex: 'HTTPMon'
   name: 'HTTPMon'
@@ -1979,10 +1978,10 @@
 - regex: 'BoardReader Favicon Fetcher'
   name: 'BoardReader'
   category: 'Search bot'
-  url: 'http://boardreader.com/'
+  url: 'https://boardreader.com/'
   producer:
     name: 'Effyis Inc'
-    url: 'http://boardreader.com/'
+    url: 'https://boardreader.com/'
 
 - regex: 'IDG/IT'
   name: 'IDG/IT'
@@ -2027,7 +2026,7 @@
 - regex: 'oBot'
   name: 'oBot'
   category: 'Search bot'
-  url: 'http://www.xforce-security.com/crawler/'
+  url: 'https://www.xforce-security.com/crawler/'
   producer:
     name: 'IBM Germany Research & Development GmbH'
     url: 'https://exchange.xforce.ibmcloud.com/'
@@ -2070,7 +2069,7 @@
   url: 'https://nutch.apache.org'
   producer:
     name: 'The Apache Software Foundation'
-    url: 'http://www.apache.org/foundation/'
+    url: 'https://www.apache.org/foundation/'
 
 - regex: 'Seobility'
   name: 'Seobility'
@@ -2085,7 +2084,7 @@
 - regex: 'Grammarly'
   name: 'Grammarly'
   category: 'Service bot'
-  url: 'http://www.grammarly.com'
+  url: 'https://www.grammarly.com'
 
 - regex: 'Robozilla'
   name: 'Robozilla'
@@ -2104,7 +2103,7 @@
 - regex: 'SerendeputyBot'
   name: 'Serendeputy Bot'
   category: 'Crawler'
-  url: 'http://serendeputy.com/about/serendeputy-bot'
+  url: 'https://serendeputy.com/about/serendeputy-bot'
 
 - regex: 'ias-va.*admantx.*service-fetcher'
   name: 'ADmantX Service Fetcher'
