--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,11 +6,14 @@
 ###############
 
 # Smart Lenovo Browser (https://www.lenovo.com.cn/)
-- regex: 'SLBrowser/(?:(\d+[\.\d]+))?'
+- regex: 'Chrome/.+ SLBrowser/(?:(\d+[\.\d]+))?'
   name: 'Smart Lenovo Browser'
   version: '$1'
   engine:
     default: 'Blink'
+- regex: 'SLBrowser/(?:(\d+[\.\d]+))?'
+  name: 'Smart Lenovo Browser'
+  version: '$1'
 
 # Stargon (http://www.stargon.org/ | https://play.google.com/store/apps/details?id=net.onecook.browser)
 - regex: 'Stargon/(?:(\d+[\.\d]+))?'
