Adds detection for BuiltWith

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2141,6 +2141,14 @@
     name: 'PPC Labs LLC'
     url: 'https://www.adbeat.com/'
 
+- regex: 'BW'
+  name: 'BuiltWith'
+  category: 'Crawler'
+  url: 'https://builtwith.com/biup'
+  producer:
+    name: 'BuiltWith Pty Ltd'
+    url: 'https://builtwith.com/'   
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)|\+http'
