Adds detection for ContentKing

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3861,3 +3861,12 @@
     producer:
       name: BuiltWith Pty Ltd
       url: https://builtwith.com/
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36 (+https://whatis.contentkingapp.com)
+  bot:
+    name: ContentKing
+    category: Site Monitor
+    url: https://whatis.contentkingapp.com/
+    producer:
+      name: ContentKing BV
+      url: https://www.contentkingapp.com/
