Adds detection for MicroAdBot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3870,3 +3870,12 @@
     producer:
       name: ContentKing BV
       url: https://www.contentkingapp.com/
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36 MicroAdBot/1.1 (https://www.microad.co.jp/contact/)
+  bot:
+    name: MicroAdBot
+    category: Crawler
+    url: https://www.microad.co.jp/
+    producer:
+      name: MicroAd, Inc.
+      url: https://www.microad.co.jp/
