Adds detection for PingAdmin.Ru

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2165,6 +2165,11 @@
     name: 'MicroAd, Inc.'
     url: 'https://www.microad.co.jp/'
 
+- regex: 'PingAdmin.Ru'
+  name: 'PingAdmin.Ru'
+  category: 'Site Monitor'
+  url: 'https://ping-admin.ru/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)|\+http'
