Adds detection for WebDataStats

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3885,3 +3885,12 @@
     name: PingAdmin.Ru
     category: Site Monitor
     url: https://ping-admin.ru/
+-
+  user_agent: Mozilla/5.0 (compatible; WebDataStats/1.0 ; +https://webdatastats.com/policy.html)
+  bot:
+    name: WebDataStats
+    category: Crawler
+    url: https://webdatastats.com/policy.html
+    producer:
+      name: WebTehRazrabotka LLC
+      url: https://webdatastats.com/
