Adds detection for parse.ly

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3894,3 +3894,12 @@
     producer:
       name: WebTehRazrabotka LLC
       url: https://webdatastats.com/
+-
+  user_agent: Mozilla/5.0 (compatible; parse.ly scraper/0.14; +http://parsely.com)
+  bot:
+    name: parse.ly
+    category: Crawler
+    url: https://www.parse.ly/help/integration/crawler
+    producer:
+      name: Parsely, Inc.
+      url: https://www.parse.ly/
