--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2178,6 +2178,14 @@
     name: 'WebTehRazrabotka LLC'
     url: 'https://webdatastats.com/'
 
+- regex: 'parse.ly scraper'
+  name: 'parse.ly'
+  category: 'Crawler'
+  url: 'https://www.parse.ly/help/integration/crawler'
+  producer:
+    name: 'Parsely, Inc.'
+    url: 'https://www.parse.ly/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)|\+http'
