feat(device) detect brand Huawei model: Enjoy 20 Pro (DVC-TN20)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5984,6 +5984,8 @@ Huawei:
       model: 'Enjoy 8e'
     - regex: 'MRD-[TA]L00(?:[);/ ]|$)'
       model: 'Enjoy 9e'
+    - regex: 'DVC-TN20(?:[);/ ]|$)'
+      model: 'Enjoy 20 Pro'
     - regex: 'U8665(?:[);/ ]|$)'
       model: 'Fusion 2'
     - regex: 'MED-LX9N?(?:[);/ ]|$)'
