--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -9862,8 +9862,7 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 10; PCHM10 Build/QKQ1.200209.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.92 Mobile Safari/537.36 SP-engine/0.0.0 matrixstyle/0 lite baiduboxapp/4.22.0.11 (Baid
-  u; P1 10)
+  user_agent: Mozilla/5.0 (Linux; Android 10; PCHM10 Build/QKQ1.200209.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.92 Mobile Safari/537.36 SP-engine/0.0.0 matrixstyle/0 lite baiduboxapp/4.22.0.11 (Baidu; P1 10)
   os:
     name: Android
     version: "10"
@@ -9878,3 +9877,21 @@
     model: A11
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; DVC-TN20 Build/HUAWEIDVC-TN20; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 Mobile Safari/537.36 LieBaoFast/5.23.1
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: LieBaoFast
+    version: 5.23.1
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Enjoy 20 Pro
+  os_family: Android
+  browser_family: Chrome
