--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -7719,4 +7719,20 @@
     model: Slade X55
   os_family: Android
   browser_family: Android Browser
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PCHM10 Build/QKQ1.200209.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.92 Mobile Safari/537.36 SP-engine/0.0.0 matrixstyle/0 lite baiduboxapp/4.22.0.11 (Baid
+  u; P1 10)
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Baidu Box App
+    version: 4.22.0.11
+  device:
+    type: smartphone
+    brand: OPPO
+    model: A11
+  os_family: Android
+  browser_family: Unknown
