--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2140,7 +2140,7 @@
     name: 'PPC Labs LLC'
     url: 'https://www.adbeat.com/'
 
-- regex: 'BW'
+- regex: 'BW/(?:(\d+[\.\d]+))'
   name: 'BuiltWith'
   category: 'Crawler'
   url: 'https://builtwith.com/biup'
