--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -9,6 +9,8 @@
 - regex: 'SeewoBrowser/(?:(\d+[\.\d]+))?'
   name: 'Seewo Browser'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # Phoenix Browser (http://phoenix-browser.com/ | https://play.google.com/store/apps/details?id=com.transsion.phoenix)
 - regex: 'PHX/(?:(\d+[\.\d]+))?'
