--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,9 +6,11 @@
 ###############
 
 # Chim Lạc (https://chimlac.com.vn/)
-- regex: '(?:chimlac_browser|chimlac)/(?:(\d+[\.\d]+))?'
+- regex: '(?:chimlac_browser|chimlac)/(?:(\d+[\.\d]+))'
   name: 'Chim Lạc'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # Phoenix Browser (http://phoenix-browser.com/ | https://play.google.com/store/apps/details?id=com.transsion.phoenix)
 - regex: 'PHX/(?:(\d+[\.\d]+))?'
